Added a blocked version of pass2 for Double SIMD that avoids shuffles